--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ sample_first_link.json
 First_link/__pycache__
 Second_link/__pycache__
 sample_zikoparser.json
+Third_link/__pycache__
+sample_monomarchparser.json
